<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="25dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    android:theme="@style/CustomButtonTheme"
    tools:context=".ParkingLotEditUserInfo">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_field" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_field"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/surnameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname_field" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname_field"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_field" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_field"
        android:inputType="phone" />

    <TextView
        android:id="@+id/nifTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nif_field" />

    <EditText
        android:id="@+id/nifEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nif_field"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_field" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/CustomButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:textSize="24dp"
        android:textStyle="bold" />

</LinearLayout>